// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BikeSelectorList /> Rendering Should hide backArrowBtn 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "height": 139.09004739336493,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "height": 139.09004739336493,
            "width": 750,
          },
          Object {
            "height": 139.09004739336493,
          },
        ]
      }
      testID="navigation-header-test-id"
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "bottom": 0,
            "flexDirection": "row",
            "height": 75.86729857819905,
            "justifyContent": "space-between",
            "left": 0,
            "marginBottom": 14.225118483412324,
            "paddingHorizontal": 30.76923076923077,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        />
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 44.25592417061611,
              "justifyContent": "center",
              "width": 496.1538461538462,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
            testID="navigation-header-test-id-title"
          >
            Generic Screen Test
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        />
      </View>
    </View>
    <Text>
      Generic Screen
    </Text>
  </View>
</View>
`;

exports[`<BikeSelectorList /> Rendering Should match snapshot 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "height": 139.09004739336493,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "height": 139.09004739336493,
            "width": 750,
          },
          Object {
            "height": 139.09004739336493,
          },
        ]
      }
      testID="navigation-header-test-id"
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "bottom": 0,
            "flexDirection": "row",
            "height": 75.86729857819905,
            "justifyContent": "space-between",
            "left": 0,
            "marginBottom": 14.225118483412324,
            "paddingHorizontal": 30.76923076923077,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="navigation-header-test-id-back-button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 30.76923076923077,
                    "height": 84.61538461538461,
                    "justifyContent": "center",
                    "width": 84.61538461538461,
                  },
                  Object {
                    "backgroundColor": "transparent",
                    "height": 46.15384615384615,
                    "paddingLeft": 3.8461538461538463,
                    "width": 46.15384615384615,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "mykross",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#333333",
                      "fontSize": 24,
                    },
                    undefined,
                  ]
                }
                testID="navigation-header-test-id-back-button-icon"
              >
                /
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 44.25592417061611,
              "justifyContent": "center",
              "width": 496.1538461538462,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
            testID="navigation-header-test-id-title"
          >
            Generic Screen Test
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        />
      </View>
    </View>
    <Text>
      Generic Screen
    </Text>
  </View>
</View>
`;

exports[`<BikeSelectorList /> Rendering Should navigate after press on backArrowBtn 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "height": 139.09004739336493,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "height": 139.09004739336493,
            "width": 750,
          },
          Object {
            "height": 139.09004739336493,
          },
        ]
      }
      testID="navigation-header-test-id"
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "bottom": 0,
            "flexDirection": "row",
            "height": 75.86729857819905,
            "justifyContent": "space-between",
            "left": 0,
            "marginBottom": 14.225118483412324,
            "paddingHorizontal": 30.76923076923077,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="navigation-header-test-id-back-button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 30.76923076923077,
                    "height": 84.61538461538461,
                    "justifyContent": "center",
                    "width": 84.61538461538461,
                  },
                  Object {
                    "backgroundColor": "transparent",
                    "height": 46.15384615384615,
                    "paddingLeft": 3.8461538461538463,
                    "width": 46.15384615384615,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "mykross",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#333333",
                      "fontSize": 24,
                    },
                    undefined,
                  ]
                }
                testID="navigation-header-test-id-back-button-icon"
              >
                /
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 44.25592417061611,
              "justifyContent": "center",
              "width": 496.1538461538462,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
            testID="navigation-header-test-id-title"
          >
            Generic Screen Test
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        />
      </View>
    </View>
    <Text>
      Generic Screen
    </Text>
  </View>
</View>
`;

exports[`<BikeSelectorList /> Rendering Should render child component 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "height": 139.09004739336493,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "height": 139.09004739336493,
            "width": 750,
          },
          Object {
            "height": 139.09004739336493,
          },
        ]
      }
      testID="navigation-header-test-id"
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "bottom": 0,
            "flexDirection": "row",
            "height": 75.86729857819905,
            "justifyContent": "space-between",
            "left": 0,
            "marginBottom": 14.225118483412324,
            "paddingHorizontal": 30.76923076923077,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="navigation-header-test-id-back-button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 30.76923076923077,
                    "height": 84.61538461538461,
                    "justifyContent": "center",
                    "width": 84.61538461538461,
                  },
                  Object {
                    "backgroundColor": "transparent",
                    "height": 46.15384615384615,
                    "paddingLeft": 3.8461538461538463,
                    "width": 46.15384615384615,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "mykross",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#333333",
                      "fontSize": 24,
                    },
                    undefined,
                  ]
                }
                testID="navigation-header-test-id-back-button-icon"
              >
                /
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 44.25592417061611,
              "justifyContent": "center",
              "width": 496.1538461538462,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
            testID="navigation-header-test-id-title"
          >
            Generic Screen Test
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        />
      </View>
    </View>
    <Text
      testID="GenericScreenChildTestComponent"
    >
      Test child component
    </Text>
  </View>
</View>
`;

exports[`<BikeSelectorList /> Rendering Should render header right action element 1`] = `
<View
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
        undefined,
        Object {
          "backgroundColor": "#fff",
        },
      ]
    }
  >
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "height": 139.09004739336493,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          },
          Object {
            "height": 139.09004739336493,
            "width": 750,
          },
          Object {
            "height": 139.09004739336493,
          },
        ]
      }
      testID="navigation-header-test-id"
    >
      <View
        style={
          Object {
            "alignItems": "flex-end",
            "bottom": 0,
            "flexDirection": "row",
            "height": 75.86729857819905,
            "justifyContent": "space-between",
            "left": 0,
            "marginBottom": 14.225118483412324,
            "paddingHorizontal": 30.76923076923077,
            "position": "absolute",
            "right": 0,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="navigation-header-test-id-back-button"
          >
            <View
              style={
                Array [
                  Object {
                    "alignContent": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 30.76923076923077,
                    "height": 84.61538461538461,
                    "justifyContent": "center",
                    "width": 84.61538461538461,
                  },
                  Object {
                    "backgroundColor": "transparent",
                    "height": 46.15384615384615,
                    "paddingLeft": 3.8461538461538463,
                    "width": 46.15384615384615,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontFamily": "mykross",
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#333333",
                      "fontSize": 24,
                    },
                    undefined,
                  ]
                }
                testID="navigation-header-test-id-back-button-icon"
              >
                /
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 44.25592417061611,
              "justifyContent": "center",
              "width": 496.1538461538462,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#333333",
                  "fontFamily": "DIN2014-Demi",
                  "fontSize": 20,
                  "fontWeight": "600",
                  "lineHeight": 24,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
            testID="navigation-header-test-id-title"
          >
            Generic Screen Test
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "height": 44.25592417061611,
              "paddingRight": 3.8461538461538463,
              "width": 96.15384615384616,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "width": "100%",
              }
            }
            testID="navigation-header-test-id-actions-container"
          >
            <View
              testID="RightActionElement"
            />
          </View>
        </View>
      </View>
    </View>
    <Text>
      Generic Screen
    </Text>
  </View>
</View>
`;
